Revert font size with rem in CSS : it fixes the text size on the Peak device, but hides some parts on smaller screens

--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,6 @@
 /* Main CSS of the application */
 
 body {
-    /* Reset base size */
-    font-size: 16px;
-
-    /* Set font size relative to base size */
-    font-size: 1.4rem;
-
     /* Remove spacing to avoid losing borders around the screen*/
     margin: 0;
 } 
-
-input[type=text], textarea, select, input[type=button], input[type=file] {
-    /* Set font size in form elements too */
-    font-size: 1.3rem;
-}
